--- a/protfolio/package.json
+++ b/protfolio/package.json
@@ -12,7 +12,8 @@
     "@heroicons/react": "^2.0.18",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icon": "^1.0.0"
   },
   "devDependencies": {
     "@react-three/drei": "^9.92.1",
